Removed aria label that was reported by FEM

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <main>
-    <div class="card" aria-label="More info card">
+    <div class="card">
       <img src="images/image-qr-code.png" alt="QR Code" class="card-image">
       <div class="card-content">
         <h1 class="card-heading">Improve your front-end skills by building projects</h1>
