--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main>
-    <div class="card">
-      <img src="images/image-qr-code.png" alt="QR Code" class="card-image">
-      <div class="card-content">
-        <h1 class="card-heading">Improve your front-end skills by building projects</h1>
-        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      </div>
-    </div>
+  <main class="card" aria-label="QR Code Card">
+    <img src="images/image-qr-code.png" alt="QR Code">
+    <h1>Improve your front-end skills by building projects</h1>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
 </body>
 </html>
